--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue-template",
   "version": "0.1.0",
+  "author": "jarhson",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -23,6 +24,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "svg-sprite-loader": "^4.1.6",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
